Fixed potentially massive spacing on hero for very tall screen sizes.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8398,8 +8398,7 @@ html, body {
 #hero {
   background: url(../images/hero-background.jpg);
   background-size: cover;
-  height: 98vh;
-  min-height: 600px;
+  min-height: 700px;
   padding-top: 140px; }
   #hero img {
     margin-bottom: 20px; }
