--- a/src/sass/theme/_main.scss
+++ b/src/sass/theme/_main.scss
@@ -25,8 +25,7 @@
 #hero {
   background: url(../images/hero-background.jpg);
   background-size: cover;
-  height: 98vh;
-  min-height: 600px;
+  min-height: 700px;
   padding-top: $navbar-height + 60px;
 
   img {
